# mbed-ce-test-tools

./: .gitmodules
.github/workflows/: compile.yaml  generate-test-report-website.yaml
CI-Shield-Tests/: .gitignore  BusInOutTest.cpp  CMakeLists.txt  CMakeUserPresets.json  DACToADCTest.cpp  DigitalIOPropagationTimeTest.cpp  DigitalIOTest.cpp  I2CBasicTest.cpp  I2CEEPROMTest.cpp  I2CSlaveCommsTest.cpp  InterruptInTest.cpp  PWMAndADCTest.cpp  README.md  SPIBasicTest.cpp  SPIMicroSDTest.cpp  SPISlaveCommsTest.cpp  TestEEPROM.cpp  TestSDCard.cpp  UARTTest.cpp  ci_test_common.h  ci_test_pins.h  cmake-variants.yaml  mbed_app.json5  requirements.txt
CI-Shield-Tests/host_test_utils/: sigrok_interface.py  usb_serial_numbers.py
CI-Shield-Tests/host_tests/: i2c_basic_test.py  i2c_record_only_test.py  i2c_slave_comms.py  signal_analyzer_test.py  spi_basic_test.py  spi_slave_comms.py  uart_test.py
Test-Result-Evaluator/: .gitignore  README.md  cmsis_pack_extra_devices.json5  requirements.txt
Test-Result-Evaluator/demo-test-configs/: ci-shield-tests-LPC1768.xml  ci-shield-tests-NUCLEO_H563ZI.xml  ci-shield-tests-NUCLEO_L452RE_P.xml  ci-shield-tests-NUCLEO_U083RC.xml  ci-shield-tests-SFE_ARTEMIS.xml  mbed-tests-ARDUINO_GIGA_CM7.xml  mbed-tests-ARDUINO_NANO33BLE.xml  mbed-tests-ARDUINO_NICLA_SENSE_ME.xml  mbed-tests-FF_LPC546XX.xml  mbed-tests-K64F.xml  mbed-tests-KL25Z.xml  mbed-tests-LPC1768.xml  mbed-tests-MIMXRT1060_EVK.xml  mbed-tests-NRF52840_DK.xml  mbed-tests-NUCLEO_F429ZI.xml  mbed-tests-NUCLEO_H563ZI.xml  mbed-tests-NUCLEO_H723ZG.xml  mbed-tests-NUCLEO_H743ZI2.xml  mbed-tests-NUCLEO_L452RE_P.xml  mbed-tests-NUCLEO_U083RC.xml  mbed-tests-NUCLEO_U575ZI-Q.xml  mbed-tests-RASPBERRY_PI_PICO.xml  mbed-tests-SFE_ARTEMIS.xml  results.xml
Test-Result-Evaluator/test_result_evaluator/: create_database.py  evaluator.py  generate_results.py  import_test_runs.py  mbed_test_database.py  parse_test_run.py  result_page_generator.py  test_executor.py  test_result_evaluator.py  test_run_parser.py
Test-Result-Evaluator/tests/: regular_test_suite_run.txt  test_test_run_parser.py
